Updated 21 Nov minutes.

--- a/alumni/meetings/20121121.md
+++ b/alumni/meetings/20121121.md
@@ -1,8 +1,10 @@
 # 21 Nov 2012 Meeting Minutes
 
 Meeting called to order at 7:31.
-Members present:
-Alumni:
+
+### Members present:
+
+#### Alumni:
 
 + Aaron Curtis
 + Andrew Curry
@@ -11,7 +13,7 @@ Alumni:
 + Holly Bennett
 + Damien Huete
 
-Active Org Rep:
+#### Active Org Rep:
 
 + Trevor Golden
 
@@ -19,14 +21,14 @@ Active Org Rep:
 ### President's Report
 + Received another bill from National.
 + We can get a not-for-profit business checking account for virtually no
-  fees.
+  fees - more info in Treasurer's Report and Budget section.
 
 ### VP's Report
-+ VP volunteers to go to represent us at National next year.
++ VP Andrew Curry volunteers to go to represent us at National next year.
 + If there's any others, we'll have to arrange for extra registration
   costs.
-+ Next meeting might be moved up north somewhere to hopefully accomodate
-  other members.
++ Next meeting might be scheduled somewhere else closer to Baltimore.
+  Location is TBD closer to January when next meeting is scheduled.
 
 ### Treasurer's Report
 + Looked into setting up a not-for-profit business checking account.
@@ -46,28 +48,28 @@ Active Org Rep:
   + Sent out in October. Usually arrives several months late.
   + The bank account will help centralizing a source of payment for dues
     and other expenses.
-  + The previous dues bill when Miles Stewart was not paid.
-  + The president wants in on the record that he wants to be reimbursed
-    for the personal expense of making up the rest of the current and
-    previous late dues payment.
+  + Our current dues include the most recent bill, and the previous
+  + Banking fees, website maintenance, and other incidentals are something
+    to be paid for by our bank account.
+    bill.
+  + **Aaron Curtis has paid the outstanding balance on both of these
+    bills. Once a checking account has been setup, more information will
+    follow as to how Alumni members can chip in to reimburse Aaron.**
 
 ### Convention
 + Convention is another component. Approximately $700 every 2 years.
   + It pays for lodging and registration (including some meals) for 1 person.
 
-### Bank account
-+ Banking fees, website maintenance, and other incidentals are something
-  to be paid for by our bank account.
-
 ### PO Box
-+ Talk about setting up a PO box near UMBC. Cost is approximately $30 annually.
++ We can see about setting up a PO box near UMBC. Cost is approximately $30 annually.
 + Tabled discussion until we have a bank account set up.
 
 ### Alumni Parliamentarian
 + Br. Eric Gernat has volunteered to be the Alumni Parliamentarian.
-+ Several members objected, however, the volunteer brought a copy of the
-  Alumni Constitution, and responded to each objection.
++ Br. Gernat has obtained a copy of the UMBC Triangle Alumni
+  Constitution.
 + Vote: Passed. Br. Eric Gernat is our new Alumni Parliamentarian.
+
 
 ## Upcoming Events
 ### Ski Trip - 21 Dec to 23 Dec (Tentative)
@@ -82,32 +84,30 @@ Active Org Rep:
 
 ### Convention - 23-27 July 2013, Irvine, CA
 + Br. Andrew Curry volunteered to go. 
-  + Br. Eric Gernat has seconded my volunteer.
-+ He will pay all costs if necessary.
++ He will pay all personal costs, not including convention fees, which
+  are to be paid by the Alumni Org.
 
-### Skeet Shooting event ???
+### Skeet Shooting
 + Br. Ryan Jordan has suggested a future skeet shooting event.
-+ Needs to gauge interest.
++ We need a better idea of who's interested.
 + If we bring our own weapons and ammo, it's much cheaper.
-+ We'd need to get some good interest; cost can be above $100 per
-  person.
++ Cost can be above $100 person depending on the venue. It can be
+  cheaper if we bring our own gear.
 + Various packages are available; they pay for everything, including
-  targets and attendants.
+  targets, equipment, and attendants.
 + We can also go to a shooting range, depending on whether the range is
   part of a gun club that requires membership or sponsorship.
 
 ### Alumni-themed event
 + Suggested by Br. Eric Gernat. 
-+ Like a social, but a more open event that is just more social that is
-  not centered around a specific activity.
-+ A BBQ next spring or summer.
-+ We can host a Brothers + SOs social event.
-+ Memorial Day BBQ, renting a park, pavilion, or other venue.
-+ Br. Eric Gernat will help organize with financial assistance from
++ Like a social, but a more open event that is just more of a casual social gathering that is not centered around a specific activity.
++ Ideas include a BBQ next spring or summer, such as Memorial Day BBQ, renting a park, pavilion, or other venue.
++ It will most likely be a Brothers & +1's social event.
++ Br. Eric Gernat will help organize and plan with financial assistance from
   folks interested to attend.
 
 ### Camping Trip
-+ Discussion occurred in the past, but a location is hard to find.
++ Discussion has occurred in the past, but a location is hard to find.
 + Committee Chair tabled until interest-gathering email is sent to
   Alumni list.
 
