--- a/alumni/meetings/20121121.md
+++ b/alumni/meetings/20121121.md
@@ -12,6 +12,7 @@ Meeting called to order at 7:31.
 + Eric Gernat
 + Holly Bennett
 + Damien Huete
++ Craig Whitten
 
 #### Active Org Rep:
 
@@ -69,7 +70,6 @@ Meeting called to order at 7:31.
 + Br. Gernat has obtained a copy of the UMBC Triangle Alumni
   Constitution.
 + Vote: Passed. Br. Eric Gernat is our new Alumni Parliamentarian.
-
 
 ## Upcoming Events
 ### Ski Trip - 21 Dec to 23 Dec (Tentative)
