--- a/alumni/meetings/20130131.md
+++ b/alumni/meetings/20130131.md
@@ -1,6 +1,6 @@
 # 31 Jan 2013 Meeting Minutes
 
-Meeting to called to order at 7:17.
+Meeting to called to order at 7:17pm.
 
 ### Members present:
 
