Updated Nov 13 2013 minutes

--- a/alumni/meetings/20131113.md
+++ b/alumni/meetings/20131113.md
@@ -1,9 +1,7 @@
 # Wed Nov 13 2013 Meeting Minutes
 
-### Meeting called to order at 7:10pm
-### Motion to run meeting by general consent - Passed.
-
-## Minecraft.
+#### Meeting called to order at 7:10pm
+#### Motion to run meeting by general consent - Passed.
 
 ### Members present at meeting:
 + Matt Kalkbrenner
@@ -16,6 +14,8 @@
 + Damien Huete
 + Holly Bennett
 + Tom Davis
++ Gary Singh
++ Theo Meyer
 
 ## Officer Reports
 
@@ -49,25 +49,15 @@
 
 ## New Business
 + Dues
-+ Nobody joined Triangle to be saddled with a lifetime financial obligation.
-+ **Disbanding the Alumni Org - Discussion**
-+ What would disbanding mean?
-+ We lose a vote at National Convention.
-+ 3 circumstances
-+ Alumni disband, and they can't do anything to it since it doesn't exist.
-+ Actives chapter could be affected. WHat's their POV?
-+ If we proceeded, we move the corporation to the actives so they have control.
-+ Corporation itself, the legal entity, recognized by state of MD. **National has no say over the corporation or business. Dues are all about suspending chapters, or legal obligations or financial obligations in civil court. They'd lose bank accounts and any legal standing.**
-+ Action Item: We'll set up a conference call with Michael Fouts.
++ Discussion about future of UMBC Alumni Org - **Refer to recent alumni email thread for more info**
 + Andy is appointing Cory to take over discussion about this. There will be an email to the alumni list about this and what has been discussed and what we are planning to do going forward.
-+ Matt K will schedule a call with Andy Curry, Cory Jones, Matt K, Eric Gernat, Matt K., and Michael Fouts.
-+ We will send out paper mail notices to brothers about this discussion and what's on the table.
++ Matt K will schedule a call with Andy Curry, Cory Jones, Eric Gernat, Matt K., and Michael Fouts, and we will raise our concerns with him.
 
 ## Upcoming Events
 + I-Week.
-+ Alumni Dinner is Nov 19th. Story Time is Nov 21st.
-+ Initiation is next Saturday.
+    + Alumni Dinner is Nov 19th, 7:30pm at Sakura Steakhouse in Ellicott City. 
+    + Story Time is Nov 21st.
++ Initiation is Nov 23rd.
 + Minecraft convention. Yeah.
-+ Piece-of-Pizza ASK fundraiser. It raises funds for the chapter.
 
 # Meeting adjourned at 8:31pm.
